# latexcompile

./: .gitignore  Cargo.toml  README.md
assets/: card.tex  test.tex
assets/auto/: card.el
assets/nested/: main.tex
src/: lib.rs
