[package]
name = "latexcompile"
description = "The is a small wrapper around pdflatex oder some other command."
repository = "https://github.com/santifa/latexcompile.git"
keywords = ["latex", "wrapper"]
categories = ["template engine"]
readme = "README.md"
license-file = "LICENSE"
version = "0.1.0"
authors = ["Henrik Jürges <juerges.henrik@gmail.com>"]
edition = "2018"
exclude = ["assets/*"]

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
log = "0.4"
regex = "^1.0"
tempfile = "3.0.3"
